# backtest-engine

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/.github/workflows/: ci.yml
src/backtest_engine/: strategy.py
src/backtest_engine/tests/: test_engine.py
src/src/backtest_engine/: engine.py
