[project]
name = "backtest-engine"
version = "0.1.0"
description = "Modular Python backtesting engine"
authors = [{name = "Nishat Sheikh"}]
dependencies = [
    "pandas",
    "numpy"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
